SP Screen Production/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Aluminium_Slats_Gates__c</fullName>
        <label>Aluminium Slats &amp; Gates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <label>Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointment_Time__c</fullName>
        <label>Appointment Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BNE:Eastern Suburbs</fullName>
                </value>
                <value>
                    <fullName>BNE:Inner Suburbs</fullName>
                </value>
                <value>
                    <fullName>BNE:Ipswich Rural</fullName>
                </value>
                <value>
                    <fullName>BNE:Logan City</fullName>
                </value>
                <value>
                    <fullName>BNE:Moreton Bay - Rural Region</fullName>
                </value>
                <value>
                    <fullName>BNE:Moreton Bay - Urban Region</fullName>
                </value>
                <value>
                    <fullName>BNE:Northern Suburbs</fullName>
                </value>
                <value>
                    <fullName>BNE:Redland City</fullName>
                </value>
                <value>
                    <fullName>BNE:Rural Region</fullName>
                </value>
                <value>
                    <fullName>BNE:Southern Suburbs</fullName>
                </value>
                <value>
                    <fullName>BNE:Western Suburbs</fullName>
                </value>
                <value>
                    <fullName>CCN:Central Coast</fullName>
                </value>
                <value>
                    <fullName>CCN:Hunter Region</fullName>
                </value>
                <value>
                    <fullName>CCN:Lake Macquarie</fullName>
                </value>
                <value>
                    <fullName>CCN:Newcastle Region</fullName>
                </value>
                <value>
                    <fullName>CCN:Port Stephens</fullName>
                </value>
                <value>
                    <fullName>COFFS:Harbour Central</fullName>
                </value>
                <value>
                    <fullName>COFFS:North</fullName>
                </value>
                <value>
                    <fullName>COFFS:North West</fullName>
                </value>
                <value>
                    <fullName>COFFS:South</fullName>
                </value>
                <value>
                    <fullName>COFFS:South West</fullName>
                </value>
                <value>
                    <fullName>SYD:Greater Western Sydney</fullName>
                </value>
                <value>
                    <fullName>SYD:Canterbury/Bankstown Area</fullName>
                </value>
                <value>
                    <fullName>SYD:Eastern Suburbs</fullName>
                </value>
                <value>
                    <fullName>SYD:Hills Area</fullName>
                </value>
                <value>
                    <fullName>SYD:Illawarra</fullName>
                </value>
                <value>
                    <fullName>SYD:Shoalhaven</fullName>
                </value>
                <value>
                    <fullName>SYD:Inner City</fullName>
                </value>
                <value>
                    <fullName>SYD:Inner West</fullName>
                </value>
                <value>
                    <fullName>SYD:Northern Beaches</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_onsite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer onsite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diamond_Grille__c</fullName>
        <description>Diamond Grille</description>
        <label>Diamond Grille</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flyscreen_Retractable__c</fullName>
        <description>Flyscreen (Retractable)</description>
        <label>Flyscreen (Retractable)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flyscreen_Window_or_Door__c</fullName>
        <description>Flyscreen Window or Door</description>
        <label>Flyscreen Window or Door</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Use_Only_BCC_CM_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick Box if CM has been completed by SP Screens for Carpet Court.</description>
        <label>(Internal Use Only) BCC CM Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Use_Only_BCC_Quote_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Internal Use Only) BCC Quote Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Division__c</fullName>
        <label>Lead Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cancelled Webpage</fullName>
                </value>
                <value>
                    <fullName>Click here Webpage</fullName>
                </value>
                <value>
                    <fullName>Contact us Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_Site_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Site Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outdoor_Roller_Blinds__c</fullName>
        <label>Outdoor Roller Blinds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patio_Louvre_Roof__c</fullName>
        <label>Patio Louvre Roof</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plantation_Shutters__c</fullName>
        <label>Plantation Shutters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reminder call</description>
        <label>Reminder call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roller_Shutters__c</fullName>
        <label>Roller Shutters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMS_Text_Message_reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SMS Text Message reminder?</description>
        <label>SMS Text Message reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <description>Sales Rep for Appointment</description>
        <label>Sales Rep</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Doors__c</fullName>
        <description>Security Doors</description>
        <label>Security Doors</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Screens__c</fullName>
        <description>Security Screens</description>
        <label>Security Screens</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Comments__c</fullName>
        <label>Site Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specific_requests_and_notes__c</fullName>
        <description>Specific requests and notes</description>
        <label>Specific requests and notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Steel_Door_Windows__c</fullName>
        <description>Steel Door Windows</description>
        <label>Steel Door Windows</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__TestDate__c</fullName>
        <formula>(LastModifiedDate  -  CreatedDate)* 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestDate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Area__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>Lead_by_Rep</fullName>
        <columns>Area__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Sales_Rep__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Lead by Rep</label>
    </listViews>
    <listViews>
        <fullName>Sales_Lead_Queue_Lead</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Lead_Type__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Area__c</columns>
        <columns>Specific_requests_and_notes__c</columns>
        <filterScope>Queue</filterScope>
        <label>Sales Lead Queue</label>
        <queue>Sales_Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>Lead_Type__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>